--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_margin = "10dp"
             android:text ="Submit ANSWER"
+            android:id="@+id/submit"
             android:background="@color/colorPrimary"/>
 
 
